--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-devtools:2.3.1.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //implementation 'org.postgresql:postgresql'
+    runtimeOnly 'com.h2database:h2'
     implementation 'org.projectlombok:lombok-maven-plugin:1.18.12.0'
     //implementation 'org.springframework.boot:spring-boot-starter-security'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.1'
