--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,18 +1,14 @@
-version: '3.1'
+version: '3'
 services:
-  app:
-    container_name: autopricing
-    image: autopricing
-    build: ./
-    ports:
-      - "8080:8080"
-    depends_on:
-      - dbpostgresql
-  dbpostgresql:
+  mkmClient_db_local:
     image: postgres
+    container_name: mkmClient_db_local
     ports:
       - "5432:5432"
-    environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=mkmClientLocal
+    env_file:
+      - database.env
+    volumes:
+      - database-data:/var/lib/postgresql/data/
+
+volumes:
+  database-data:
