--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - database.env
     volumes:
-      - database-data:/var/lib/postgresql/data/
+      - mkm-database-data:/var/lib/postgresql/data/
 
 volumes:
-  database-data:
+  mkm-database-data:
