--- a/build.gradle
+++ b/build.gradle
@@ -13,20 +13,26 @@ repositories {
 }
 
 dependencies {
+    //Spring-Boot
 	implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-devtools:2.3.1.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.postgresql:postgresql'
-    implementation 'com.h2database:h2'
-    implementation 'org.projectlombok:lombok-maven-plugin:1.18.12.0'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     //implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    // Database
+    implementation 'org.postgresql:postgresql'
+    implementation 'com.h2database:h2'
+    // Dev Tools
+    implementation 'org.projectlombok:lombok-maven-plugin:1.18.12.0'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    //Formats
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.1'
+    //Webjars
+    implementation 'org.webjars:bootstrap:4.5.0'
+    implementation 'org.webjars:font-awesome:5.13.0'
 
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
