--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,14 @@ dependencies {
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     //Formats
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
+    compile group: 'com.neovisionaries', name: 'nv-i18n', version: '1.24'
+
+
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+
+
     //Webjars
     implementation 'org.webjars:bootstrap:4.5.0'
     implementation 'org.webjars:font-awesome:5.13.0'
