--- a/build.gradle
+++ b/build.gradle
@@ -34,16 +34,22 @@ dependencies {
     implementation "org.mapstruct:mapstruct:1.4.1.Final"
     annotationProcessor "org.mapstruct:mapstruct-processor:1.4.1.Final"
 
-    testCompileOnly 'org.projectlombok:lombok:1.18.14'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.14'
-    testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.4.1.Final"
-    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     //Formats
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
     compile group: 'com.neovisionaries', name: 'nv-i18n', version: '1.24'
 
+    //documentation
+    compile group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+
+
+    //testing
+    testCompileOnly 'org.projectlombok:lombok:1.18.14'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.14'
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.4.1.Final"
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
