--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,10 @@ dependencies {
     annotationProcessor "org.mapstruct:mapstruct-processor:1.4.1.Final"
 
     //Formats
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0-rc1'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.0-rc1'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.1'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.12.0-rc1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
     compile group: 'com.neovisionaries', name: 'nv-i18n', version: '1.24'
