--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   mkmClient_db_local:
     image: postgres
-    container_name: mkmClient_db_local
+    container_name: mkmClient_db_dev
     ports:
       - "5432:5432"
     env_file:
