--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,13 @@ services:
         ipv4_address: 172.16.100.20
     ports:
       - 8081:8081
-
+  mkmClient-FE:
+    image: mkmclient/fe:latest
+    networks:
+      app_net:
+        aliases:
+          - "skaldenmagic"
+        ipv4_address: 172.16.100.100
 
 volumes:
   mkm-database-data:
