--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  mkmClient_db_local:
+  mkmClient_db_dev:
     image: postgres
     container_name: mkmClient_db_dev
     ports:
